* Refactored logic from model to controller * Solved tree rendering problem * Added duration renderer

--- a/griffon-app/i18n/messages.properties
+++ b/griffon-app/i18n/messages.properties
@@ -79,3 +79,6 @@ application.action.Hide.short_description = Close
 application.action.Close.name = Close
 application.action.Close.mnemonic = C
 application.action.Close.short_description = Close
+
+application.splash.LoadingLastWorkspace = Restoring last workspace
+application.splash.GeneratingDefaultData = Generating default data
