Introdotta finestra di dialogo per la gestione dei workspace

--- a/griffon-app/i18n/messages.properties
+++ b/griffon-app/i18n/messages.properties
@@ -79,6 +79,12 @@ application.action.Hide.short_description = Close
 application.action.Close.name = Close
 application.action.Close.mnemonic = C
 application.action.Close.short_description = Close
+application.action.Export.name = Export
+application.action.Export.mnemonic = E
+application.action.Export.short_description = Export
+application.action.Import.name = Import
+application.action.Import.mnemonic = I
+application.action.Import.short_description = Import
 
 application.splash.LoadingLastWorkspace = Restoring last workspace
 application.splash.GeneratingDefaultData = Generating default data
