* added tray builder * partial implementation of duration formatter

--- a/griffon-app/i18n/messages.properties
+++ b/griffon-app/i18n/messages.properties
@@ -82,3 +82,6 @@ application.action.Close.short_description = Close
 
 application.splash.LoadingLastWorkspace = Restoring last workspace
 application.splash.GeneratingDefaultData = Generating default data
+
+status.working=WORKING
+status.idle=IDLE
