--- a/griffon-app/i18n/messages.properties
+++ b/griffon-app/i18n/messages.properties
@@ -16,6 +16,12 @@ application.menu.Edit.name = Edit
 application.menu.Edit.mnemonic = E
 application.menu.View.name = View
 application.menu.View.mnemonic = V
+application.menu.Tasks.name = Tasks
+application.menu.Tasks.mnemonic = T
+application.menu.Actions.name = Actions
+application.menu.Actions.mnemonic = A
+application.menu.Tools.name = Tools
+application.menu.Tools.mnemonic = o
 application.menu.Help.name = Help
 application.menu.Help.mnemonic = H
 ##
