Aggiunte icone, aggiunte dialog per le proprietà dei task, apertura workspace e creazione workspace

--- a/griffon-app/i18n/messages.properties
+++ b/griffon-app/i18n/messages.properties
@@ -35,6 +35,8 @@ application.action.Open.name = Open...
 application.action.Open.mnemonic = O
 application.action.Open.accelerator = meta O
 application.action.Open.short_description = Open
+application.action.Ok.name = Ok
+application.action.Ok.short_description = Ok
 application.action.Quit.name = Quit
 application.action.Quit.mnemonic = Q
 application.action.Quit.accelerator = meta Q
